--- a/index.html
+++ b/index.html
@@ -6,9 +6,51 @@
 <div>
     <h2>My Repo</h2>
     <p>This is my practice file for GitHub GUI and gh-pages.</p>
+    	<ul>
+			<li><a href="http://brettgrobarz.github.io/exercises/angry-gandalf.html"></a></li>
+    	</ul>
+    <a href="http://brettgrobarz.github.io/exercises" title="Link to my first gh-pages">My MakerSquare Exercises<a>
+    	<script type="text/javascript">
 
-    <a href="http://yourgithubusername.github.io/exercises" title="Link to my first gh-pages">My MakerSquare Exercises<a>
+    	var slap = function() {
+  		alert('SLAP');
+	};
+		slap();
 
+		var kick = function (name) {
+		  alert(name + ' reproaches your behavior.');
+	};
+		kick('Billy');
+
+		var doubleIt = function (x) {
+	  		alert(x + ' times two is ' + (x*2));
+	};
+		doubleIt(8);
+
+		var greet = function (name) {
+		  alert("Welcome, " + name);
+	};
+		greet('Brett');
+
+		function KanyeCase(verse) {
+			return verse.toUpperCase();
+	}
+		alert(KanyeCase("whatever"));
+
+		var divideBy = function (x, y) {
+		  return (X/Y);
+		}
+
+				var result = divideBy(50, 2);
+				console.log('Result should be 25:', result);
+
+				result = divideBy(40, 10);
+				console.log('Result should be 4:', result);
+
+				result = divideBy(99, 3);
+				console.log('Result should be 33:', result);
+
+    	</script>
 </div> 
 </body>
 </html>
