--- a/MakerBeer.html
+++ b/MakerBeer.html
@@ -2,22 +2,27 @@
 <html>
 
 <head>
-  <title>Angry Gandalf</title>
+  <title>Maker Beer</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-  <h2>Angry Gandalf</h2>
+  <h2>Maker Beer</h2>
 <body>
 
-  <input type='text' id="name" />
-  <button id="submitInput">Submit</button>
-  <div id="gandalfMessage"></div>
+      <input type='text' id="name" />
+      <button id="submitInput">Submit</button>
+      <div id="gandalfMessage"></div>
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
+  </script>
+
+
   <script type="text/javascript">
+
+
 
     /**
      * @exercise 0 - angryGandalf (example)
-     **/
+     
 
     // Define angryGandalf with input parameters
     var angryGandalf = function(type) {
