--- a/life-line.html
+++ b/life-line.html
@@ -23,14 +23,11 @@
         * @description takes children, partner's name, hometown, and job
           * @returns 'You are a W from X and married to Y  with Z kids.'
         **/
-        var description = function(w, x, y, z){;
-            return ('You are a' w ' from' x ' and married to' Y ' with' Z ' kids')};
-
-            console.log(description(architect, succasunna, giselle, '5'))
-
+        
 // Create function with name tellFortune and appropriate parameters
 // Take 4 arguments: number of children, partner's name, hometown, job title.
-        var tellFortune = function()
+        var tellFortune = function(number of children, partner's name, hometown, job title) {
+            return ('You are a' w ' from' x ' and married to' Y ' with' Z ' kids')};
 
   // Define string variable that will have that output
 
