--- a/floats.html
+++ b/floats.html
@@ -1,19 +1,26 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>Floats</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta charset="utf-8">
+    <title>Floats</title>
+    <link rel="stylesheet" href="css/style.css">
+    <!--[if IE]>
+        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 </head>
 <body>
-	<div class="header">header</div>
 
-		<div class="group">group
+    <header>header</header>
 
-		<div class="main">main</div> <div class="sidebar">sidebar</div>
-		
-		</div>
-		
 	
-	<div class="footer">footer</div>
-
+ </div>
+    <div class="group">
+        <p>group</p>
+        <div class="main">main</div>
+        <div class="sidebar">sidebar</div>
+    </div>
+    
+    <footer>footer</footer>
+       
 </body>
 </html>
