mid day tweaks w/ megan

--- a/life-line.html
+++ b/life-line.html
@@ -25,6 +25,14 @@
         **/
         
 // Create function with name tellFortune and appropriate parameters
+
+var tellFortune = function (w, x, y, z) {
+  return("You are a " + w + " from " + x + " and married to " + y + " with " + z + " kids.");
+};
+
+tellFortune('bball player', 'Spain', 'Shaq', '3');
+tellFortune('stunt double', 'Japan', 'Ryan Gosling', '3000');
+tellFortune('Elvis impersonator', 'Russia', 'The Oatmeal', '0');
 // Take 4 arguments: number of children, partner's name, hometown, job title.
         var tellFortune = function(jobTitle, homeTown, partnerName, numChildren){
             
