--- a/MakerBeer.html
+++ b/MakerBeer.html
@@ -17,31 +17,35 @@
 
 
   <script type="text/javascript">
-
 /**
  * Exercise 2 Part 1: ofAge
 **/
 
 // Write a function named `ofAge` that:
+var ofAge = function(age) {
+  var age;
+
+  if (age >= 21) {
+        return "true";
+        }
+  else if (age < 21) {
+        return "false";
+        }
+  else {
+      return "false";
+        }
+};
+ofAge(21)
+
     // takes 1 argument: age.
     // calculate if that age is 21 or above.
     // Output true or false based on if the age is above age
 
-    var ofAge = function(age){
-
-      if ( age >= 21 ) {
-        console.log("true");
-    }else {
-        console.log ("false");
-    }
-  };
-
-
-console.assert(ofAge(21) === true);
-console.assert(ofAge(22) === true);
-console.assert(ofAge(18) === false);
-console.assert(ofAge(0) === false);
-console.assert(ofAge(-2) === false);
+// console.assert(ofAge(21) === true);
+// console.assert(ofAge(22) === true);
+// console.assert(ofAge(18) === false);
+// console.assert(ofAge(0) === false);
+// console.assert(ofAge(-2) === false);
 
 /**
  * Exercise 2 Part 2: getAge
@@ -71,46 +75,68 @@ console.assert(ofAge(-2) === false);
         // @return {Number} age
         return age;
     }
+calculateAge('August', '16', '1979');
+calculateAge('October', '16', '1984');
+calculateAge('February', '14', '1949');
+calculateAge('January', '25', '1951');
 
-console.assert(calculateAge)
+/**
+ * Exercise 2 Part 3: checkOfAge
+**/
+
+// Write a function named `checkOfAge` that:
+
+var checkOfAge = function(birthMonth, birthDay, birthYear) {
+  var calculateAge;
+
+        // Get Todays Date
+        var todayDate = new Date(),
+            todayYear = todayDate.getFullYear(),
+            todayMonth = todayDate.getMonth(),
+            todayDay = todayDate.getDate();
+
+        // Calculate Age
+        var age = todayYear - birthYear;
+
+        // Check month discrepancies
+        if (todayMonth < (birthMonth - 1)) {
+            age--;
+        }
+
+        // Check day discrepancies
+        if (((birthMonth - 1) == todayMonth) && (todayDay < birthDay)) {
+            age--;
+
+            return age;
+        };
+
+    var age;
+
+    if (age >= 21) {
+          return "true";
+          }
+    else if (age < 21) {
+          return "false";
+          }
+    else {
+        return "false";
+          }
+};
+checkOfAge(12,01,1988);
+checkOfAge(1,1,2001);
+checkOfAge(1,1,1993);
 
 
 
+}
+    // takes 3 arguments: month, day, year.
+    // Use the getAge function to calculate the age.
+    // calculate if that age is 21 or above.
+    // Output true or false based on if the age is above age
 
-    /**
-     * @exercise 0 - angryGandalf (example)
-     
-
-    /
-    var angryGandalf = function(type) {
-
-      
-      var message;
-
-      // Run conditional on type for 'grey' and 'white'
-      if (type === 'grey') {
-        message = "YOU...SHALL NOT... PASS!";
-      } else if (type === 'white') {
-        message = "You merely passed me to your demise.";
-      } else {
-        message = "I don't think I'm Gandalf anymore.";
-      }
-
-      // Return message
-      return message
-
-    }
-
-    console.assert(angryGandalf('grey') === "YOU...SHALL NOT... PASS!");
-    console.assert(angryGandalf('white') === "You merely passed me to your demise.");
-    console.assert(angryGandalf(2) === "I don't think I'm Gandalf anymore.");
-
-    // Event Handler
-    $("#submitInput").on('click', function() {
-      var name = $("#name").val();
-      var message = angryGandalf(name);
-      $("#gandalfMessage").html(message);
-    });
+console.assert(checkOfAge(12,01,1988) === true);
+console.assert(checkOfAge(1,1,1993) === true);
+console.assert(checkOfAge(1,1,2001) === false);
 
   </script>
 
