--- a/MakerBeer.html
+++ b/MakerBeer.html
@@ -41,11 +41,11 @@ ofAge(21)
     // calculate if that age is 21 or above.
     // Output true or false based on if the age is above age
 
-// console.assert(ofAge(21) === true);
-// console.assert(ofAge(22) === true);
-// console.assert(ofAge(18) === false);
-// console.assert(ofAge(0) === false);
-// console.assert(ofAge(-2) === false);
+        console.assert(ofAge(21) === true);
+        console.assert(ofAge(22) === true);
+        console.assert(ofAge(18) === false);
+        console.assert(ofAge(0) === false);
+        console.assert(ofAge(-2) === false);
 
 /**
  * Exercise 2 Part 2: getAge
