--- a/MakerBeer.html
+++ b/MakerBeer.html
@@ -3,14 +3,12 @@
 
 <head>
   <title>Maker Beer</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <!-- <link rel="stylesheet" type="text/css" href="css/style.css"> -->
 </head>
   <h2>Maker Beer</h2>
 <body>
 
-      <input type='text' id="name" />
-      <button id="submitInput">Submit</button>
-      <div id="gandalfMessage"></div>
+     
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
   </script>
@@ -139,6 +137,12 @@ console.assert(checkOfAge(1,1,1993) === true);
 console.assert(checkOfAge(1,1,2001) === false);
 
   </script>
+      <form>
+      Birth Month: <input type="text" name="firstname"><br>
+      Birth Day: <input type="text" name="lastname">
+      Birth Year: <input type="text" name="lastname">
+      </form>
+
 
 </body>
     <a href="index.html">Back to Index</a>
