--- a/life-line.html
+++ b/life-line.html
@@ -3,14 +3,18 @@
 
 <head>
   <title>Life Line</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  
 </head>
   <h2>Life Line</h2>
 <body>
 
-      <!-- <input type='text' id="name" />
-      <button id="submitInput">Submit</button>
-      <div id="gandalfMessage"></div> -->
+      Job <input type="text" id="w"><br>
+      Hometown: <input type="text" id="x"><br>
+      Partners Name: <input type="text" id="y"><br>
+      # of Children: <input type="text" id="z"><br>
+      <button id="submit">Submit</button>
+
+        <div id="sentenceOutput"></div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
   </script>
@@ -45,10 +49,18 @@ tellFortune('Elvis impersonator', 'Russia', 'The Oatmeal', 0);
      // var lifeLine ('You are a' w ' from' x ' and married to' y ' with' z ' kids');
 
 
-console.assert(lifeLine('bball player', 'Spain', 'Shaq', 3) === 'You are a bball player from Spain and married to Shaq  with 3 kids.' ); 
-console.assert(lifeLine('stunt double', 'Japan', 'Ryan Gosling', 3000) === 'You are a stunt double from Japan and married to Ryan Gosling  with 3000 kids.');
-console.assert(lifeLine('Elvis impersonator', 'Russia', 'The Oatmeal', 0) === 'You are a Elvis impersonator from Russia and married to The Oatmeal  with 0 kids.') ; 
+//console.assert(lifeLine('bball player', 'Spain', 'Shaq', 3) === 'You are a bball player from Spain and married to Shaq  with 3 kids.' ); 
+//console.assert(lifeLine('stunt double', 'Japan', 'Ryan Gosling', 3000) === 'You are a stunt double from Japan and married to Ryan Gosling  with 3000 kids.');
+//console.assert(lifeLine('Elvis impersonator', 'Russia', 'The Oatmeal', 0) === 'You are a Elvis impersonator from Russia and married to The Oatmeal  with 0 kids.') ; 
 
+$("#submit").on('click', function() {
+      var w = $("#w").val();
+      var x = $("#x").val();
+      var y = $("#y").val();
+      var z = $("#z").val();
+      var message = tellFortune(w, x, y, z);
+      $("#sentenceOutput").html(message);
+    });
 
 
 
