started RF with ex 13

--- a/floats/example-13.html
+++ b/floats/example-13.html
@@ -1,16 +1,44 @@
 <!DOCTYPE html>
 	<head>
-		<title>Example 13 | MakerSquare Float Exercises</title>
+		<title>PerceptioNation</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="example-13.css">
 	</head>
 
 	<body>
-	<!-- Create a layout of your choosing! -->
+	<!-- Float the logo left and nav right in the header. Then make the sidebar float to the left of the two sub content divs, which should stack on top of each other. The footer should clear. -->
+		<div class="container">
+			<div class="header">
+				<div class="section-type-e">E</div>
+				<div class="section-type-f">F</div>
+				<div class="section-type-h">H</div>
+				<div class="section-type-r">R</div>
+				<div class="section-type-s">S</div>
+				<div class="section-type-n">N</div>
+			</div>
+			
+			<div class="main-content">
+				<!---<div class="sidebar">sidebar</div> -->
+				<hr class="sexy_line" />
+				<div class="sub-content-section">
+					<h1>HEALTH & SAFTEY</h1>
+					<p>QUESTION OF THE DAY</p>
+				</div>
+				<div class="sub-content-question">
 
-	<div class="container">
-		<p>I'm blank! Make a layout!</p>
-	</div>
+					<p class="p-question">Who do you think is more likely to be a victim of weather related fatalities in the U.S., men or women?</p>
+
+					<a class="btn">Men</a>
+					<a class="btn">Women</a>
+				</div>	
+			
+
+			<div class="footer">
+				<hr class="sexy_line" />
+				<p>2014 Riskfactor, LLC.</p>
+			</div>
+		</div>
+
 	</body>
 </html>
