pre class update

--- a/floats/example-13.html
+++ b/floats/example-13.html
@@ -36,7 +36,7 @@
 
 			<div class="footer">
 				<hr class="sexy_line" />
-				<p>2014 Riskfactor, LLC.</p>
+				<p3>2014 Riskfactor, LLC.</p3>
 			</div>
 		</div>
 
