--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			<li><a href="life-line.html">Life Line</a></li>
 			<li><a href="MakerBeer.html">Maker Beer</a></li>
 			<li><a href="floats.html">Floats</a></li>
+			<li><a href="/floats/example-13.html">example 13 my css</li>
     	</ul>
     <a href="http://brettgrobarz.github.io/exercises" title="Link to my first gh-pages">My MakerSquare Exercises<a>
     	<script type="text/javascript">
